# sql-explorer-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  servers.example.yaml
.github/workflows/: ci.yml  release-please.yml  release.yml
src/sql_explorer_mcp/: __init__.py  audit.py  config.py  engines.py  introspection.py  mask.py  rbac.py  safety.py  server.py
tests/: test_audit.py  test_config.py  test_engines_sqlite.py  test_introspection.py  test_safety.py
